# Dumas

./: .gitignore  CMakeLists.txt  README.md  image.ppm
includes/: Dumas.hpp  color.h  ray.h
src/main/: main.cpp
